# informal_to_formal_llm

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  informal_formal_v1.csv  pyproject.toml  treningv1.ipynb
.github/workflows/: build_docs.yml
api/: README.md  pyproject.toml
app/: Makefile  README.md  pyproject.toml
app/api/: db.py  db_mongo.py  main.py  schemas.py
app/api/llm/: model.py
app/api/llm/utils/: util.py
app/ui/: main.py
docs/: README.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
getting-started/: index.html
informal_to_formal/data_preprocessor/: __init__.py  data_preprocessor.py  training_data_preprocessor.py
informal_to_formal/evaluation/: evaluator.py
informal_to_formal/training/: __init__.py  trainer.py  unsloth_trainer.py
informal_to_formal/utils/: consts.py  inference.py
notebooks/: 02-dagshub-mlflow-integration.ipynb  03-dagshub-data-versioning.ipynb  04_fine_tuning_unsloth.ipynb  05_train_model_from_cli_example.ipynb  few-shot-prompting-eval.ipynb  fine_tune_huggingface_2.ipynb  huggingface_trained_experiment.ipynb
search/: search_index.json
tests/: test_dagshub_mlflow_integration.py  test_evaluator.py
