[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "informal_to_formal"
version = "0.0.1"
description = "Informal2formal LLM for Polish language."
authors = [
  { name = "JJS" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ruff",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "scikit-learn",
    "evaluate",
    "bert_score",
    "rouge_score",
    "tqdm",
    "mlflow",
    "dagshub",
    "unsloth",
    "click",
]
requires-python = "~=3.11.0"

[tool.ruff]
line-length = 99
src = ["informal_to_formal"]
include = ["pyproject.toml", "informal_to_formal/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["informal_to_formal"]
force-sort-within-sections = true

