[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["yanvoi <janwojciechowski@op.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
streamlit = "^1.45.1"
streamlit-chat = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
