[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["yanvoi <janwojciechowski@op.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
streamlit = "^1.45.1"
codespell = "^2.4.1"
isort = "^6.0.1"
yesqa = "^1.5.0"
black = "^25.1.0"
ruff = "^0.11.10"
sqlalchemy = "^2.0.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
